(library
 (name keyval_functional_test)
 (public_name eio-rpc.keyval-functional-test)
 (inline_tests
  (deps %{bin:keyval}))
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base)
 (libraries
  base
  eio
  eio_main
  expect_test_helpers_core.expect_test_helpers_base
  grpc_client
  grpc_test
  keyval
  keyval_rpc)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments ppx-let-fun)))
