(library
 (name keyval_functional_test)
 (public_name eio-rpc.keyval-functional-test)
 (inline_tests
  (deps keyval.exe))
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers)
 (libraries
  base
  eio
  eio_main
  expect-test-helpers
  grpc_client
  grpc_test
  keyval
  keyval_rpc)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx-let-fun)))

(rule
 (copy ../bin/main.exe keyval.exe))
