(library
 (name grpc_discovery)
 (public_name grpc-discovery)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Or_error.Let_syntax)
 (libraries base core.command eio fpath fpath-extended yojson)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments ppx_yojson_conv)))
