(library
 (name grpc_discovery)
 (public_name grpc-discovery)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Cmdlang)
 (libraries base cmdlang eio fpath fpath-base yojson)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx_yojson_conv)))
