(library
 (name grpc_quickcheck)
 (public_name grpc-quickcheck)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base)
 (libraries
  base
  base_quickcheck
  expect_test_helpers_core.expect_test_helpers_base
  grpc_spec)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
