(library
 (name grpc_server)
 (public_name grpc-server)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries grpc-eio grpc-spec grpc-stream h2 h2-eio)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
