(library
 (name grpc_server_test)
 (public_name eio-rpc.grpc-server-test)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base)
 (libraries
  base
  expect_test_helpers_core.expect_test_helpers_base
  grpc_server)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
