(library
 (name keyval)
 (public_name eio-rpc.keyval)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Base_quickcheck)
 (libraries base base_quickcheck)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   base_quickcheck.ppx_quickcheck
   ppx_sexp_conv
   ppx_sexp_value
   ppx_js_style
   -check-doc-comments)))
