(library
 (name keyval_command)
 (public_name eio-rpc.keyval-command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Or_error.Let_syntax)
 (libraries
  base
  core.command
  eio
  eio-writer
  eio_main
  grpc-client
  grpc-discovery
  keyval_rpc
  keyval_server)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
