(library
 (name keyval_rpc_proto)
 (public_name eio-rpc-tests.keyval-rpc-proto)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries pbrt pbrt_services pbrt_yojson)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(rule
 (copy %{project_root}/.ocamlformat .ocamlformat))

(rule
 (targets keyval.ml keyval.mli)
 (deps
  .ocamlformat
  (glob_files *.proto))
 (alias runtest)
 (mode promote)
 (action
  (progn
   (run
    ocaml-protoc
    keyval.proto
    --ocaml_all_types_ppx
    "deriving show { with_path = false }, eq"
    --binary
    --yojson
    --services
    --ml_out
    .)
   (run ocamlformat --inplace %{targets}))))
