(executable
 (name main)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries
  keyval_rpc_proto
  pbrt
  pbrt_quickcheck
  pbrt_yojson
  qcheck
  qcheck-core
  yojson)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving_qcheck ppx_deriving.show ppx_deriving.eq)))

(rule
 (target test.outputs)
 (action
  (with-accepted-exit-codes
   (or 0 1)
   (with-outputs-to
    %{target}
    (run ./%{dep:main.exe} --no-colors --seed 382079347)))))

(rule
 (alias runtest)
 (action
  (diff test.outputs.expected test.outputs)))
